--- a/index.html
+++ b/index.html
@@ -12,21 +12,96 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
             }
-          }
         }
-      </script>
+    </script>
 </head>
 
 <body>
-    <header>
+    <!-- main content -->
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <header class="md:flex pt-10 mb-20">
+            <div>
+                <h1 class="text-5xl md:text-7xl font-extrabold">It's good <br>
+                    tea time at The <br> Tea House</h1> <br>
+                <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your
+                    Taste Buds.</p>
+                <br>
+                <button class="bg-gradient-to-r from-orange-500 to-red-500 rounded-lg px-5 py-3 text-white font-bold">
+                    Explore More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i>
+                </button>
 
-    </header>
+            </div>
+            <div class="relative">
+                <div>
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+                <div
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-80 left-32">
+                    <div>
+                        <i class="fa-solid fa-star text-amber-500 text-2xl"></i>
+                    </div>
+                    <div ml-2>
+                        <h2 class="text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </header>
+        <!-- featuer poroduct section -->
+        <section class="py-8 lg:py-24">
+            <!-- title -->
+            <div class="text-center">
+                <h3 class="text-3xl md:text-4xl font-bold mb-4">Our Featured Products</h3>
+                <p class="text-gray-600 mx-auto max-w-xl">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+            <!-- grid card -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 text-center mt-5">
+                <!-- product cart -->
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="images/tea-1.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                        <p class="text-gray-400">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="images/tea-2.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Black Tea</h2>
+                        <p class="text-gray-400">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="images/tea-3.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Green Tea</h2>
+                        <p class="text-gray-400">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                    <img class="mx-auto pt-4" src="images/tea-4.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Leaon Tea</h2>
+                        <p class="text-gray-400">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+    </main>
+
 </body>
 
 </html>
