footer section done

--- a/index.html
+++ b/index.html
@@ -154,23 +154,24 @@
                 </div>
                 <!-- review card section -->
                 <div class="relative py-24">
-                           <!-- middle card -->
-                           <div class="z-10 md:top-52 top-44 absolute h-56 bg-white  w-full  md:w-3/4 text-black rounded-lg flex items-center px-5 ">
-                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
-                                <img src="images/client.png" alt="">
-                            </div>
-                            <div>
-                                <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services
-                                    for the people who are interested to treatment</p>
-                                <h1 class="font-bold">
-                                    Ilham Yuda
-                                </h1>
-                                <small class="font-bold text-gray-500">
-                                    Businessman
-                                </small>
-                            </div>
-    
+                    <!-- middle card -->
+                    <div
+                        class="z-10 md:top-52 top-44 absolute h-56 bg-white  w-full  md:w-3/4 text-black rounded-lg flex items-center px-5 ">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img src="images/client.png" alt="">
                         </div>
+                        <div>
+                            <p class="text-gray-500 mb-5">We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h1 class="font-bold">
+                                Ilham Yuda
+                            </h1>
+                            <small class="font-bold text-gray-500">
+                                Businessman
+                            </small>
+                        </div>
+
+                    </div>
                     <!-- top card -->
                     <div
                         class="relative h-56 bg-white  w-full left-8 md:left-32 md:w-3/4 text-black rounded-lg flex items-center px-5 opacity-40">
@@ -189,7 +190,7 @@
                         </div>
 
                     </div>
-             
+
                     <!-- bottom card -->
                     <div
                         class="top-10 relative h-56 bg-white  w-full md:w-3/4 text-black rounded-lg flex items-center px-5 opacity-40 left-8 md:left-32">
@@ -214,8 +215,82 @@
             </div>
 
         </section>
+        <!-- footer section -->
+
 
     </main>
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+        <div class="w-9/12 mx-auto">
+            <!-- logo -->
+            <div class="mb-9 flex justify-between">
+                <img class="mb-8" src="images/cup.png" alt="">
+                <div class="flex items-center gap-2">
+                    <h4>Ready to get strated?</h4>
+                    <button
+                        class="bg-gradient-to-r from-orange-500 to-red-500 rounded-lg px-3 py-2 text-white font-bold">
+                        Get Started
+                    </button>
+                </div>
+            </div>
+            <!-- links -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <!-- first column -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li> <a class="hover:text-orange-600" href="">Home</a></li>
+                        <li> <a class="hover:text-orange-600" href="">About us</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Insurance</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li> <a class="hover:text-orange-600" href="">Home</a></li>
+                        <li> <a class="hover:text-orange-600" href="">About us</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Insurance</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li> <a class="hover:text-orange-600" href="">Home</a></li>
+                        <li> <a class="hover:text-orange-600" href="">About us</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Insurance</a></li>
+                        <li> <a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- forth column -->
+                <div>
+                    <h3 class="font-semibold text-lg space-y-2">Subscribe to our newsletter</h3>
+                    <div class="flex flex-col space-y-2">
+                        <div>
+                            <input placeholder="Email Address" type="text"
+                                class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6">
+                            <i
+                                class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"></i>
+                            <div class="flex justify-between w-2/5 mb-2 mt-8">
+                                <i class="fa-brands fa-facebook"></i>
+                                <i class="fa-brands fa-instagram"></i>
+                                <i class="fa-brands fa-square-twitter"></i>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-center pt-4 mt-4">
+                <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+
+
+        </div>
+
+    </footer>
 
 </body>
 
